# functional-envelope-sequencer

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  flake.nix  plugin.json  pyproject.toml
.claude/: settings.local.json
nix/: rack-sdk-setup-hook.sh  rack-sdk.nix
src/: FES8.cpp  fes_dsp.hpp  plugin.cpp  plugin.hpp
src/notebooks/: README.md  notebook.ipynb
src/scripts/: check.py  plot_envelopes.py
src/simulations/: README.md  pyproject.toml
src/simulations/simulations/: combiners.py  compute.py  envelope.py  helpers.py
src/tests/cpp/: test_fes_dsp  test_fes_dsp.cpp
src/tests/simulations/: test_compute.py  test_envelope_hypothesis.py  test_envelope_integration.py  test_envelope_unit.py  test_plot_envelopes.py
